<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.vingreen.callrecording.view.activity.login.LoginActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/welcome"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/text_color"
            android:text="@string/sign_in_to_continue"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_input_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:errorIconTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            style = "@style/CustomOutlineBox"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style = "@style/MyTextInputEditText"
                android:hint="@string/email_id" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            style = "@style/CustomOutlineBox"
            app:layout_constraintStart_toStartOf="@+id/user_name_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/user_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style = "@style/MyTextInputEditText"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/button_gradient"
            android:text="@string/login"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/nunitos_emibold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>